crates/ddlog-syntax/tests/inline/pass/relation_columns.dl
// kind:item
relation Foo(bar: Baz, bing: Bang)
multiset Foo(bar: Baz, bing: Bang)
stream Foo(bar: Baz, bing: Bang)
