crates/ddlog-syntax/tests/inline/fail/relation_arg_without_comma.dl
// kind:item
relation Foo(bar: Baz bing: Bang)
